...
                                        <constraints>
                                            <constraint firstAttribute="width" constant="160" id="JiF-Iy-OCY"/>
                                            <constraint firstAttribute="height" constant="50" id="nu4-dw-E8q"/>
                                        </constraints>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Show Stargazers">
                                            <backgroundConfiguration key="background" image="button.png"/>
                                            <fontDescription key="titleFontDescription" type="system" pointSize="10"/>
                                        </buttonConfiguration>
                                        <connections>
                                            <action selector="btnShowTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yqh-by-8Zr"/>
                                        </connections>
...
